[gd_scene load_steps=19 format=2]

[ext_resource path="res://your_notepad/pages/Page1.png" type="Texture" id=1]
[ext_resource path="res://your_notepad/pages/ButtonNext.png" type="Texture" id=2]
[ext_resource path="res://your_notepad/pages/ButtonPrev.png" type="Texture" id=3]
[ext_resource path="res://your_notepad/NotepadPage.gd" type="Script" id=4]
[ext_resource path="res://your_notepad/pages/Page2.png" type="Texture" id=5]
[ext_resource path="res://your_notepad/pages/Page4.png" type="Texture" id=6]
[ext_resource path="res://your_notepad/pages/Page3.png" type="Texture" id=7]
[ext_resource path="res://your_notepad/pages/Page5.png" type="Texture" id=8]
[ext_resource path="res://your_notepad/pages/Page6.png" type="Texture" id=9]
[ext_resource path="res://your_notepad/pages/PageHelp3.png" type="Texture" id=10]
[ext_resource path="res://your_notepad/pages/PageHelp2.png" type="Texture" id=11]
[ext_resource path="res://your_notepad/pages/PageTitle.png" type="Texture" id=12]
[ext_resource path="res://your_notepad/pages/PageHelp1.png" type="Texture" id=13]
[ext_resource path="res://your_notepad/pages/PageTitle_Between.png" type="Texture" id=14]
[ext_resource path="res://SFXRand.tscn" type="PackedScene" id=15]
[ext_resource path="res://sfx/turn_page.wav" type="AudioStream" id=16]
[ext_resource path="res://your_notepad/pages/PageHelpTheEnd.png" type="Texture" id=17]
[ext_resource path="res://your_notepad/pages/Page7.png" type="Texture" id=18]

[node name="NotepadPage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -413.0
margin_top = -159.136
margin_bottom = -15.1362
texture = ExtResource( 2 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Prev" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -153.0
margin_right = 532.0
texture = ExtResource( 3 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTitle" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 180.0
texture = ExtResource( 12 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageHelp1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 180.0
texture = ExtResource( 13 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageHelp2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 180.0
texture = ExtResource( 11 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageHelp3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 180.0
texture = ExtResource( 10 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageTB" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 180.0
texture = ExtResource( 14 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page2" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page3" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page4" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page5" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page6" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page7" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 18 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageEnd" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 17 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn" parent="." instance=ExtResource( 15 )]
stream = ExtResource( 16 )
volume_db = 7.15
